Correções no capítulo de Pensamento Computacional

--- a/professor.tex
+++ b/professor.tex
@@ -34,12 +34,12 @@
 % \include{chapters/semelhanca}
 % \include{chapters/financeira}
 % \include{chapters/ladrilhos}
-\include{chapters/cartografia}
+% \include{chapters/cartografia}
 % \include{chapters/investigacao}
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
 % \include{chapters/combinatoria}
-% \include{chapters/computacional}
+\include{chapters/computacional}
 % \include{chapters/transformacoes}
 % \include{chapters/livroaberto}
 
