--- a/aluno.tex
+++ b/aluno.tex
@@ -18,7 +18,7 @@
 % \include{chapters/funcoes}
 % \include{chapters/taxa}
 % \include{chapters/funcao-afim}
-\include{chapters/funcao-quadratica}
+% \include{chapters/funcao-quadratica}
 % \include{chapters/sistemas}
 % \include{chapters/exponencial}
 % \include{chapters/logaritmos}
@@ -36,7 +36,7 @@
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
 % \include{chapters/combinatoria}
-% \include{chapters/computacional}
+\include{chapters/computacional}
 % \include{chapters/transformacoes}
 % \include{chapters/livroaberto}
 
