--- a/professor.tex
+++ b/professor.tex
@@ -25,7 +25,7 @@
 % \include{chapters/sistemas}
 % \include{chapters/exponencial}
 % \include{chapters/logaritmos}
-% \include{chapters/funcao-trigonometrica}
+\include{chapters/funcao-trigonometrica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
 % \include{chapters/probabilidade1}
@@ -39,7 +39,7 @@
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
 % \include{chapters/combinatoria}
-\include{chapters/computacional}
+% \include{chapters/computacional}
 % \include{chapters/transformacoes}
 % \include{chapters/livroaberto}
 
