Correções da última atualização
Adição da bibliografia no capítulo de Ladrilhamento e correção da página de créditos do capítulo A Natureza da Estatística.

--- a/Minimal/modelo.tex
+++ b/Minimal/modelo.tex
@@ -133,3 +133,16 @@
 
 \item 
 \end{enumerate}
+
+
+\ifnum\aluno=1
+\clearpage
+\else
+\notasfinais
+\fi
+
+
+\bibliographystyle{apalike-pt}
+\bibliography{../Bibliografia/ladrilhos_bibliografia.bib}
+
+\nocite{*}
