--- a/aluno.tex
+++ b/aluno.tex
@@ -24,9 +24,9 @@
 % \include{chapters/exponencial}
 % \include{chapters/logaritmos}
 % \include{chapters/funcao-trigonometrica}
-% \include{chapters/estatistica1}
+\include{chapters/estatistica1}
 % \include{chapters/estatistica2}
-\include{chapters/probabilidade1}
+% \include{chapters/probabilidade1}
 % \include{chapters/medidas}
 % \include{chapters/tales}
 % \include{chapters/semelhanca}
@@ -42,7 +42,7 @@
 % \include{chapters/livroaberto}
 
 
-% \renewcommand{\indexname}{?dice}
+% \renewcommand{\indexname}{Índice}
 % \makeindex
 % \printindex
 \end{document}
