--- a/aluno.tex
+++ b/aluno.tex
@@ -39,10 +39,10 @@
 % \include{chapters/combinatoria}
 % \include{chapters/computacional}
 % \include{chapters/transformacoes}
-% \include{chapters/livroaberto}
+\include{chapters/livroaberto}
 
 
-% \renewcommand{\indexname}{Õndice}
+% \renewcommand{\indexname}{√çndice}
 % \makeindex
 % \printindex
 \end{document}
