--- a/Minimal/livroaberto-professor.sty
+++ b/Minimal/livroaberto-professor.sty
@@ -22,7 +22,6 @@
 
 % Define o diretório das figuras e das fontes
 \def\fontspath{Fontes/}
-\def\graphics{Figuras/}
 
 \def\aluno{0}
 
@@ -112,7 +111,6 @@ decorations.pathmorphing, graphs, quotes, angles, calc, through, backgrounds}
 \RequirePackage{pdfpages}
 \RequirePackage{stmaryrd}
 \RequirePackage{lscape}
-
 \RequirePackage[sectionbib]{natbib}
 \RequirePackage{chapterbib}
 \patchcmd{\thebibliography}{%
@@ -270,7 +268,36 @@ decorations.pathmorphing, graphs, quotes, angles, calc, through, backgrounds}
 \newskip\libroskip
 \libroskip= 4pt plus 1pt minus 1pt
 \hfuzz=4pt
-\graphicspath{\graphics}
+\graphicspath{
+	{Figuras/}
+	{Figuras/vetores/}
+	{Figuras/perspectiva1/}
+	{Figuras/perspectiva2/}
+	{Figuras/funcoes/}
+	{Figuras/taxa/}
+	{Figuras/funcao-afim/}
+	{Figuras/funcao-quadratica/}
+	{Figuras/sistemas/}
+	{Figuras/exponencial/}
+	{Figuras/logaritmos/}
+	{Figuras/funcao-trigonometrica/}
+	{Figuras/estatistica1/}
+	{Figuras/estatistica2/}
+	{Figuras/probabilidade1/}
+	{Figuras/medidas/}
+	{Figuras/tales/}
+	{Figuras/semelhanca/}
+	{Figuras/financeira/}
+	{Figuras/ladrilhos/}
+	{Figuras/cartografia/}
+	{Figuras/investigacao/}
+	{Figuras/superficie/}
+	{Figuras/trigonometria/}
+	{Figuras/combinatoria/}
+	{Figuras/computacional/}
+	{Figuras/transformacoes/}
+	{Figuras/livroaberto/}
+}
 
 
 \def\envskip{\vskip\libroskip}
@@ -906,7 +933,7 @@ underlay boxed title={
 
 
         \begin{pgfonlayer}{bottom}
-            \node[opacity=0.3,inner sep=0pt] at (current page.center){\includegraphics[width=\paperwidth,height=\paperheight]{\@chapterillustration}};
+            \node[opacity=0.3,inner sep=0pt] at (current page.center){\includegraphics[width=\paperwidth,height=\paperheight]{capas/\@chapterillustration}};
         \end{pgfonlayer}
 
         \begin{pgfonlayer}{top}
@@ -1572,7 +1599,7 @@ underlay boxed title={
 % Define asymptote picture directory
 
 
-\def\asydir{Asymptote/asytmp-perspectiva1}
+% \def\asydir{Asymptote/asytmp-perspectiva1}
 % \def\asydir{Asymptote/asytmp-perspectiva2}
 
 % Define the layers to be used in document.
@@ -1768,7 +1795,11 @@ underlay boxed title={
   \clearpage
   \stepcounter{anexo}
   \begin{center}
+  \ifx#1\empty
   \huge{\titem{Anexo \theanexo}}
+  \else
+  \huge{\titem{Anexo \theanexo - #1}}
+  \fi
   \end{center}
 }
 
