--- a/professor.tex
+++ b/professor.tex
@@ -39,7 +39,7 @@
 % \include{chapters/combinatoria}
 % \include{chapters/computacional}
 % \include{chapters/transformacoes}
-\include{chapters/livroaberto}
+% \include{chapters/livroaberto}
 
 % \renewcommand{\indexname}{Índice}
 % \makeindex
