--- a/aluno.tex
+++ b/aluno.tex
@@ -37,7 +37,7 @@
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
 % \include{chapters/combinatoria}
-% \include{chapters/computacional}
+\include{chapters/computacional}
 % \include{chapters/transformacoes}
 % \include{chapters/livroaberto}
 
